cpn/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> petrinet
Rule 1     petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET
Rule 2     colortype -> type
Rule 3     places -> place COMMA places
Rule 4     places -> place
Rule 5     transitions -> transition COMMA transitions
Rule 6     transitions -> transition
Rule 7     arcs -> arc COMMA arcs
Rule 8     arcs -> arc
Rule 9     markings -> marking COMMA markings
Rule 10    markings -> marking
Rule 11    type -> LABEL
Rule 12    place -> LABEL LPAREN RPAREN
Rule 13    transition -> LABEL LPAREN RPAREN
Rule 14    transition -> LABEL LPAREN LABEL COMMA NUMBER RPAREN
Rule 15    arc -> LPAREN LABEL COMMA LABEL RPAREN
Rule 16    arc -> LPAREN LABEL COMMA LABEL COMMA LABEL RPAREN
Rule 17    arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN
Rule 18    arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN
Rule 19    arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN
Rule 20    marking -> LPAREN LABEL COMMA tokens RPAREN
Rule 21    tokens -> NUMBER EXPRESSION
Rule 22    tokens -> NUMBER EXPRESSION PLUSPLUS tokens

Terminals, with rules where they appear

ARCS                 : 1
CLOSESET             : 1 1 1 1 1
COLORTYPE            : 1
COMMA                : 3 5 7 9 14 15 16 16 17 17 17 18 18 18 18 19 19 19 20
EQUALS               : 1 1 1 1 1
EXPRESSION           : 21 22
LABEL                : 11 12 13 14 14 15 15 16 16 16 17 17 17 18 18 18 19 19 19 19 20
LPAREN               : 12 13 14 15 16 17 18 19 19 20
MARKINGS             : 1
NUMBER               : 14 17 18 18 19 21 22
OPENSET              : 1 1 1 1 1
PLACES               : 1
PLUSPLUS             : 17 19 22
RPAREN               : 12 13 14 15 16 17 18 19 19 20
TRANSITIONS          : 1
error                : 

Nonterminals, with rules where they appear

arc                  : 7 8
arcs                 : 1 7
colortype            : 1
marking              : 9 10
markings             : 1 9
petrinet             : 0
place                : 3 4
places               : 1 3
tokens               : 20 22
transition           : 5 6
transitions          : 1 5
type                 : 2

Parsing method: LALR

state 0

    (0) S' -> . petrinet
    (1) petrinet -> . COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    COLORTYPE       shift and go to state 2

    petrinet                       shift and go to state 1

state 1

    (0) S' -> petrinet .



state 2

    (1) petrinet -> COLORTYPE . EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    EQUALS          shift and go to state 3


state 3

    (1) petrinet -> COLORTYPE EQUALS . OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    OPENSET         shift and go to state 4


state 4

    (1) petrinet -> COLORTYPE EQUALS OPENSET . colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET
    (2) colortype -> . type
    (11) type -> . LABEL

    LABEL           shift and go to state 7

    colortype                      shift and go to state 5
    type                           shift and go to state 6

state 5

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype . CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    CLOSESET        shift and go to state 8


state 6

    (2) colortype -> type .

    CLOSESET        reduce using rule 2 (colortype -> type .)


state 7

    (11) type -> LABEL .

    CLOSESET        reduce using rule 11 (type -> LABEL .)


state 8

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET . PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    PLACES          shift and go to state 9


state 9

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES . EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    EQUALS          shift and go to state 10


state 10

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS . OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    OPENSET         shift and go to state 11


state 11

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET . places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET
    (3) places -> . place COMMA places
    (4) places -> . place
    (12) place -> . LABEL LPAREN RPAREN

    LABEL           shift and go to state 14

    places                         shift and go to state 12
    place                          shift and go to state 13

state 12

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places . CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    CLOSESET        shift and go to state 15


state 13

    (3) places -> place . COMMA places
    (4) places -> place .

    COMMA           shift and go to state 16
    CLOSESET        reduce using rule 4 (places -> place .)


state 14

    (12) place -> LABEL . LPAREN RPAREN

    LPAREN          shift and go to state 17


state 15

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET . TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    TRANSITIONS     shift and go to state 18


state 16

    (3) places -> place COMMA . places
    (3) places -> . place COMMA places
    (4) places -> . place
    (12) place -> . LABEL LPAREN RPAREN

    LABEL           shift and go to state 14

    place                          shift and go to state 13
    places                         shift and go to state 19

state 17

    (12) place -> LABEL LPAREN . RPAREN

    RPAREN          shift and go to state 20


state 18

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS . EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    EQUALS          shift and go to state 21


state 19

    (3) places -> place COMMA places .

    CLOSESET        reduce using rule 3 (places -> place COMMA places .)


state 20

    (12) place -> LABEL LPAREN RPAREN .

    COMMA           reduce using rule 12 (place -> LABEL LPAREN RPAREN .)
    CLOSESET        reduce using rule 12 (place -> LABEL LPAREN RPAREN .)


state 21

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS . OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    OPENSET         shift and go to state 22


state 22

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET . transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET
    (5) transitions -> . transition COMMA transitions
    (6) transitions -> . transition
    (13) transition -> . LABEL LPAREN RPAREN
    (14) transition -> . LABEL LPAREN LABEL COMMA NUMBER RPAREN

    LABEL           shift and go to state 25

    transitions                    shift and go to state 23
    transition                     shift and go to state 24

state 23

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions . CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    CLOSESET        shift and go to state 26


state 24

    (5) transitions -> transition . COMMA transitions
    (6) transitions -> transition .

    COMMA           shift and go to state 27
    CLOSESET        reduce using rule 6 (transitions -> transition .)


state 25

    (13) transition -> LABEL . LPAREN RPAREN
    (14) transition -> LABEL . LPAREN LABEL COMMA NUMBER RPAREN

    LPAREN          shift and go to state 28


state 26

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET . ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    ARCS            shift and go to state 29


state 27

    (5) transitions -> transition COMMA . transitions
    (5) transitions -> . transition COMMA transitions
    (6) transitions -> . transition
    (13) transition -> . LABEL LPAREN RPAREN
    (14) transition -> . LABEL LPAREN LABEL COMMA NUMBER RPAREN

    LABEL           shift and go to state 25

    transition                     shift and go to state 24
    transitions                    shift and go to state 30

state 28

    (13) transition -> LABEL LPAREN . RPAREN
    (14) transition -> LABEL LPAREN . LABEL COMMA NUMBER RPAREN

    RPAREN          shift and go to state 32
    LABEL           shift and go to state 31


state 29

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS . EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    EQUALS          shift and go to state 33


state 30

    (5) transitions -> transition COMMA transitions .

    CLOSESET        reduce using rule 5 (transitions -> transition COMMA transitions .)


state 31

    (14) transition -> LABEL LPAREN LABEL . COMMA NUMBER RPAREN

    COMMA           shift and go to state 34


state 32

    (13) transition -> LABEL LPAREN RPAREN .

    COMMA           reduce using rule 13 (transition -> LABEL LPAREN RPAREN .)
    CLOSESET        reduce using rule 13 (transition -> LABEL LPAREN RPAREN .)


state 33

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS . OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    OPENSET         shift and go to state 35


state 34

    (14) transition -> LABEL LPAREN LABEL COMMA . NUMBER RPAREN

    NUMBER          shift and go to state 36


state 35

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET . arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET
    (7) arcs -> . arc COMMA arcs
    (8) arcs -> . arc
    (15) arc -> . LPAREN LABEL COMMA LABEL RPAREN
    (16) arc -> . LPAREN LABEL COMMA LABEL COMMA LABEL RPAREN
    (17) arc -> . LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN
    (18) arc -> . LPAREN LABEL COMMA LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN
    (19) arc -> . LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN

    LPAREN          shift and go to state 39

    arcs                           shift and go to state 37
    arc                            shift and go to state 38

state 36

    (14) transition -> LABEL LPAREN LABEL COMMA NUMBER . RPAREN

    RPAREN          shift and go to state 40


state 37

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs . CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET

    CLOSESET        shift and go to state 41


state 38

    (7) arcs -> arc . COMMA arcs
    (8) arcs -> arc .

    COMMA           shift and go to state 42
    CLOSESET        reduce using rule 8 (arcs -> arc .)


state 39

    (15) arc -> LPAREN . LABEL COMMA LABEL RPAREN
    (16) arc -> LPAREN . LABEL COMMA LABEL COMMA LABEL RPAREN
    (17) arc -> LPAREN . LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN
    (18) arc -> LPAREN . LABEL COMMA LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN
    (19) arc -> LPAREN . LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN

    LABEL           shift and go to state 43


state 40

    (14) transition -> LABEL LPAREN LABEL COMMA NUMBER RPAREN .

    COMMA           reduce using rule 14 (transition -> LABEL LPAREN LABEL COMMA NUMBER RPAREN .)
    CLOSESET        reduce using rule 14 (transition -> LABEL LPAREN LABEL COMMA NUMBER RPAREN .)


state 41

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET . MARKINGS EQUALS OPENSET markings CLOSESET

    MARKINGS        shift and go to state 44


state 42

    (7) arcs -> arc COMMA . arcs
    (7) arcs -> . arc COMMA arcs
    (8) arcs -> . arc
    (15) arc -> . LPAREN LABEL COMMA LABEL RPAREN
    (16) arc -> . LPAREN LABEL COMMA LABEL COMMA LABEL RPAREN
    (17) arc -> . LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN
    (18) arc -> . LPAREN LABEL COMMA LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN
    (19) arc -> . LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN

    LPAREN          shift and go to state 39

    arc                            shift and go to state 38
    arcs                           shift and go to state 45

state 43

    (15) arc -> LPAREN LABEL . COMMA LABEL RPAREN
    (16) arc -> LPAREN LABEL . COMMA LABEL COMMA LABEL RPAREN
    (17) arc -> LPAREN LABEL . COMMA LABEL COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN
    (18) arc -> LPAREN LABEL . COMMA LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN
    (19) arc -> LPAREN LABEL . COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN

    COMMA           shift and go to state 46


state 44

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS . EQUALS OPENSET markings CLOSESET

    EQUALS          shift and go to state 47


state 45

    (7) arcs -> arc COMMA arcs .

    CLOSESET        reduce using rule 7 (arcs -> arc COMMA arcs .)


state 46

    (15) arc -> LPAREN LABEL COMMA . LABEL RPAREN
    (16) arc -> LPAREN LABEL COMMA . LABEL COMMA LABEL RPAREN
    (17) arc -> LPAREN LABEL COMMA . LABEL COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN
    (18) arc -> LPAREN LABEL COMMA . LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN
    (19) arc -> LPAREN LABEL COMMA . LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN

    LABEL           shift and go to state 48


state 47

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS . OPENSET markings CLOSESET

    OPENSET         shift and go to state 49


state 48

    (15) arc -> LPAREN LABEL COMMA LABEL . RPAREN
    (16) arc -> LPAREN LABEL COMMA LABEL . COMMA LABEL RPAREN
    (17) arc -> LPAREN LABEL COMMA LABEL . COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN
    (18) arc -> LPAREN LABEL COMMA LABEL . COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN
    (19) arc -> LPAREN LABEL COMMA LABEL . COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN

    RPAREN          shift and go to state 51
    COMMA           shift and go to state 50


state 49

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET . markings CLOSESET
    (9) markings -> . marking COMMA markings
    (10) markings -> . marking
    (20) marking -> . LPAREN LABEL COMMA tokens RPAREN

    LPAREN          shift and go to state 54

    markings                       shift and go to state 52
    marking                        shift and go to state 53

state 50

    (16) arc -> LPAREN LABEL COMMA LABEL COMMA . LABEL RPAREN
    (17) arc -> LPAREN LABEL COMMA LABEL COMMA . LABEL COMMA PLUSPLUS NUMBER RPAREN
    (18) arc -> LPAREN LABEL COMMA LABEL COMMA . LABEL COMMA NUMBER COMMA NUMBER RPAREN
    (19) arc -> LPAREN LABEL COMMA LABEL COMMA . LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN

    LABEL           shift and go to state 55


state 51

    (15) arc -> LPAREN LABEL COMMA LABEL RPAREN .

    COMMA           reduce using rule 15 (arc -> LPAREN LABEL COMMA LABEL RPAREN .)
    CLOSESET        reduce using rule 15 (arc -> LPAREN LABEL COMMA LABEL RPAREN .)


state 52

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings . CLOSESET

    CLOSESET        shift and go to state 56


state 53

    (9) markings -> marking . COMMA markings
    (10) markings -> marking .

    COMMA           shift and go to state 57
    CLOSESET        reduce using rule 10 (markings -> marking .)


state 54

    (20) marking -> LPAREN . LABEL COMMA tokens RPAREN

    LABEL           shift and go to state 58


state 55

    (16) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL . RPAREN
    (17) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL . COMMA PLUSPLUS NUMBER RPAREN
    (18) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL . COMMA NUMBER COMMA NUMBER RPAREN
    (19) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL . COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN

    RPAREN          shift and go to state 60
    COMMA           shift and go to state 59


state 56

    (1) petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET .

    $end            reduce using rule 1 (petrinet -> COLORTYPE EQUALS OPENSET colortype CLOSESET PLACES EQUALS OPENSET places CLOSESET TRANSITIONS EQUALS OPENSET transitions CLOSESET ARCS EQUALS OPENSET arcs CLOSESET MARKINGS EQUALS OPENSET markings CLOSESET .)


state 57

    (9) markings -> marking COMMA . markings
    (9) markings -> . marking COMMA markings
    (10) markings -> . marking
    (20) marking -> . LPAREN LABEL COMMA tokens RPAREN

    LPAREN          shift and go to state 54

    marking                        shift and go to state 53
    markings                       shift and go to state 61

state 58

    (20) marking -> LPAREN LABEL . COMMA tokens RPAREN

    COMMA           shift and go to state 62


state 59

    (17) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA . PLUSPLUS NUMBER RPAREN
    (18) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA . NUMBER COMMA NUMBER RPAREN
    (19) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA . PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN

    PLUSPLUS        shift and go to state 63
    NUMBER          shift and go to state 64


state 60

    (16) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL RPAREN .

    COMMA           reduce using rule 16 (arc -> LPAREN LABEL COMMA LABEL COMMA LABEL RPAREN .)
    CLOSESET        reduce using rule 16 (arc -> LPAREN LABEL COMMA LABEL COMMA LABEL RPAREN .)


state 61

    (9) markings -> marking COMMA markings .

    CLOSESET        reduce using rule 9 (markings -> marking COMMA markings .)


state 62

    (20) marking -> LPAREN LABEL COMMA . tokens RPAREN
    (21) tokens -> . NUMBER EXPRESSION
    (22) tokens -> . NUMBER EXPRESSION PLUSPLUS tokens

    NUMBER          shift and go to state 66

    tokens                         shift and go to state 65

state 63

    (17) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS . NUMBER RPAREN
    (19) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS . LABEL LPAREN NUMBER RPAREN RPAREN

    NUMBER          shift and go to state 68
    LABEL           shift and go to state 67


state 64

    (18) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA NUMBER . COMMA NUMBER RPAREN

    COMMA           shift and go to state 69


state 65

    (20) marking -> LPAREN LABEL COMMA tokens . RPAREN

    RPAREN          shift and go to state 70


state 66

    (21) tokens -> NUMBER . EXPRESSION
    (22) tokens -> NUMBER . EXPRESSION PLUSPLUS tokens

    EXPRESSION      shift and go to state 71


state 67

    (19) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL . LPAREN NUMBER RPAREN RPAREN

    LPAREN          shift and go to state 72


state 68

    (17) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS NUMBER . RPAREN

    RPAREN          shift and go to state 73


state 69

    (18) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA NUMBER COMMA . NUMBER RPAREN

    NUMBER          shift and go to state 74


state 70

    (20) marking -> LPAREN LABEL COMMA tokens RPAREN .

    COMMA           reduce using rule 20 (marking -> LPAREN LABEL COMMA tokens RPAREN .)
    CLOSESET        reduce using rule 20 (marking -> LPAREN LABEL COMMA tokens RPAREN .)


state 71

    (21) tokens -> NUMBER EXPRESSION .
    (22) tokens -> NUMBER EXPRESSION . PLUSPLUS tokens

    RPAREN          reduce using rule 21 (tokens -> NUMBER EXPRESSION .)
    PLUSPLUS        shift and go to state 75


state 72

    (19) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN . NUMBER RPAREN RPAREN

    NUMBER          shift and go to state 76


state 73

    (17) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN .

    COMMA           reduce using rule 17 (arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN .)
    CLOSESET        reduce using rule 17 (arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS NUMBER RPAREN .)


state 74

    (18) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER . RPAREN

    RPAREN          shift and go to state 77


state 75

    (22) tokens -> NUMBER EXPRESSION PLUSPLUS . tokens
    (21) tokens -> . NUMBER EXPRESSION
    (22) tokens -> . NUMBER EXPRESSION PLUSPLUS tokens

    NUMBER          shift and go to state 66

    tokens                         shift and go to state 78

state 76

    (19) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER . RPAREN RPAREN

    RPAREN          shift and go to state 79


state 77

    (18) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN .

    COMMA           reduce using rule 18 (arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN .)
    CLOSESET        reduce using rule 18 (arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA NUMBER COMMA NUMBER RPAREN .)


state 78

    (22) tokens -> NUMBER EXPRESSION PLUSPLUS tokens .

    RPAREN          reduce using rule 22 (tokens -> NUMBER EXPRESSION PLUSPLUS tokens .)


state 79

    (19) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN . RPAREN

    RPAREN          shift and go to state 80


state 80

    (19) arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN .

    COMMA           reduce using rule 19 (arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN .)
    CLOSESET        reduce using rule 19 (arc -> LPAREN LABEL COMMA LABEL COMMA LABEL COMMA PLUSPLUS LABEL LPAREN NUMBER RPAREN RPAREN .)

